tests/typing/fail/multi_assign_star_star_fail.rb


*x = *[1,2]

x[0].foo

*y = *2

y.foo

